objects/CPOC_Shared_Resource__c.object
<CustomObject>
    <fields>
        <fullName>CPOC_All_Shared_Resource__c</fullName>
        <description>CPOC ALL Shared resource</description>
        <label>CPOC All Shared Resource</label>
        <referenceTo>CPOC_All_Shared_Resources__c</referenceTo>
        <relationshipLabel>CPOC Shared Resources</relationshipLabel>
        <relationshipName>CPOC_Shared_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPOC_End_Date__c</fullName>
        <description>CPOC End date</description>
        <label>Shared Resource End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPOC_Start_Date__c</fullName>
        <description>CPOC Start date</description>
        <label>Shared Resource Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <description>Related of CEE for CPOC</description>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>CPOC Shared Resources</relationshipLabel>
        <relationshipName>CPOC_Shared_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CPOC Shared Resource</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>CPOC Shared Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPOC Shared Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Visit_End_date_should_be_more</fullName>
        <active>true</active>
        <description>In  CPOC, Visit end date should be more than start date</description>
        <errorConditionFormula>CPOC_End_Date__c &lt; CPOC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_Start_Date__c</errorDisplayField>
        <errorMessage>CPOC Start date should be less than CPOC End date</errorMessage>
    </validationRules>
</CustomObject>